%% Build and check from R:
%% news(db = tools:::.build_news_db_from_package_NEWS_Rd("<Matrix>/inst/NEWS.Rd"))
\name{NEWS}
\title{News for \R{} Package \pkg{Matrix}}
\encoding{UTF-8}
%% NB: The date (yyyy-mm-dd) is the "Packaged: " date in ../DESCRIPTION
\section{Changes in version 1.8-0 (2024-11-16 r5036)}{
  \subsection{Deprecated and Defunct}{
    \itemize{
      \item Coercions to \code{dpoMatrix} or \code{dppMatrix} are
      deprecated.  Coerce to new virtual class \code{posdefMatrix}
      instead.
    }
  }
  \subsection{Significant User-Visible Changes}{
    \itemize{
      \item This version will introduce integer matrices, complex
      matrices, and complex factorizations.  Names and definitions of
      factorization classes may change to support the generalization.
      It is currently under active development and until it stabilizes
      users should consider installing \pkg{Matrix} versions 1.7-z
      instead.

      \item The formal argument list of generic function
      \code{forceSymmetric} is changed from \code{(x, uplo)} to
      \code{(x, \dots)}, allowing methods to accept further arguments.
      The generic function now dispatches only on \code{x}.

      \item The formal argument list of generic function
      \code{nnzero} is changed from \code{(x, na.counted)} to
      \code{(x, \dots)}, allowing methods to accept further arguments.

      \item The formal argument lists of generic functions
      \code{symmpart}, \code{skewpart}, \code{isDiagonal}, and
      \code{isTriangular} gain \code{\dots}, allowing methods to accept
      further arguments.

      \item Methods for \code{cov2cor} coerce the (symmetrized)
      argument to new virtual class \code{posdefMatrix} before scaling.
      Hence an error is signaled where the (symmetrized) argument
      is not positive definite.  Use \code{dimScale} (introduced in
      \pkg{Matrix} 1.5-2) for more general scaling.
    }
  }
  \subsection{New Features}{
    \itemize{