@@ -1,5 +1,40 @@
 #include "Mdefines.h"
 
+/* .... Dim ......................................................... */
+
+SEXP R_Dim_prod(SEXP dim)
+{
+	int m = 0, n = 0;
+	if (TYPEOF(dim) != INTSXP || XLENGTH(dim) != 2 ||
+	    (m = INTEGER(dim)[0]) < 0 || (n = INTEGER(dim)[1]) < 0)
+		Rf_error(_("invalid '%s' to '%s'"), "dim", __func__);
+	int_fast64_t mn = (int_fast64_t) m * n;
+	SEXP ans;
+	if (mn <= INT_MAX) {
+		ans = Rf_allocVector(INTSXP, 1);
+		INTEGER(ans)[0] = (int) mn;
+	} else {
+		int_fast64_t mn_ = (int_fast64_t) (double) mn;
+		if (mn_ > mn)
+			mn_ = (int_fast64_t) nextafter((double) mn, 0.0);
+		ans = Rf_allocVector(REALSXP, 1);
+		REAL(ans)[0] = (double) mn_;
+		if (mn_ != mn) {
+			PROTECT(ans);
+			static
+			SEXP offSym = NULL;
+			SEXP offVal = PROTECT(Rf_allocVector(REALSXP, 1));
+			if (!offSym)
+				offSym = Rf_install("off");
+			REAL(offVal)[0] = (double) (mn - mn_);
+			Rf_setAttrib(ans, offSym, offVal);
+			UNPROTECT(2);
+		}
+	}
+	return ans;
+}
+
+
 /* .... Dimnames .................................................... */
 
 int DimNames_is_trivial(SEXP dn)
